--- a/src/components/DealerBoard/DealerBoard.scss
+++ b/src/components/DealerBoard/DealerBoard.scss
@@ -39,6 +39,9 @@
                     margin-top: em(-2,18);
                 }
             }
+            &:hover{
+                opacity: .5;
+            }
         }
     }
     &__brands-btn{
