--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -20,7 +20,7 @@
         padding-top: em(14,18);
     }
     @media(max-width: 1000px){
-        padding: 65px 0 150px;
+        padding: 65px 0;
         &__tit{
             padding-top: 52px;
         }
